Adding a new favicon and style modification

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600&display=swap" rel="stylesheet">
-        <link rel="shorcut icon" href="./assets/image/favicon-32x32.png" type="image/S-icon">
+        <link rel="shorcut icon" href="./assets/image/favicon-32x32 copy.png" type="image/S-icon">
         <link rel="stylesheet" href="./assets/style/index.css" media="all">
         <script src="./assets/script/index.js" defer></script>
     </head>
@@ -31,17 +31,16 @@
                     </select>
                     <button id="createBtn">Create</button>
                 </div>
-                    <div class="grid-container" id="grid">
+                <div class="grid-container" id="grid">
                 </div>
                 <div id="infoMsg" class="hidden"></div>
                 <div id="fullStorageMsg" class="hidden">You can't add more shapes.
                     Storage is full</div>
-            </div>
         </main>
-        <div class="container">
-            <footer> 
+         <footer> 
+            <div class="container"></div>
                 <p id="footer"> &copy2023 Deynni Almazan</p> 
-            </footer>
-        </div>
+            </div>
+        </footer>
     </body>
 </html>
