--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-with, initial-scale=1">
-        <meta name="description" content="My portfolio">
-        <meta name="keywords" content="html, css, web, web development, seo">
+        <meta name="description" content="Shape factory">
+        <meta name="keywords" content="html, css, javascript">
         <title>Shape Factory</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
